--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,1 +1,29 @@
-<h1> Hello world </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <!-- You can include additional meta tags, stylesheets, or scripts here -->
+</head>
+<body>
+    <header>
+        <h1>Your Page Heading</h1>
+    </header>
+
+    <nav>
+        <!-- You can add navigation links here if needed -->
+    </nav>
+
+    <main>
+        <p>This is a basic HTML page. Replace this content with your own.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+    </footer>
+
+    <!-- You can include additional scripts or other elements here -->
+</body>
+</html>
+
